--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link rel="icon" href="favicon.ico">
 
-    <title>The Paris DevRel Salon</title>
+    <title>{{ site.title }}</title>
 
     <!-- Fontawesome CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -21,7 +21,7 @@
 
     <!-- Custom styles for this template -->
     <link href="https://fonts.googleapis.com/css?family=Crimson+Text|Libre+Baskerville:400,400i,700" rel="stylesheet">
-    <link href="navbar-fixed-top.css" rel="stylesheet">
+    <link href="/css/site.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -68,8 +68,8 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/">The Paris DevRel Salon</a>
         </div>
+        <div id="logo"><a href="/"><img src="/images/logo.png"></a></div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li class="active"><a href="/">Home</a></li>
@@ -77,11 +77,10 @@
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
                         Past Meetings <span class="caret"></span>
                     </a>
-                    <ul class="dropdown-menu"> 
-                        <li><a href="/meetings/20171026.html">26 October 2017</a></li>
-                        <li><a href="/meetings/20170921.html">21 September 2017</a></li>
-                        <li><a href="/meetings/20170817.html">17 August 2017</a></li>
-                        <li><a href="/meetings/20170704.html">4 July 2017</a></li>
+                    <ul class="dropdown-menu">
+                        {% for post in site.posts %}
+                        <li><a href="{{ post.url }}">{{ post.title }}</a></li>
+                        {% endfor %}
                     </ul>
                 </li>
                 <li><a href="mailto:howdy@devrel.salon">Contact</a></li>
@@ -93,50 +92,11 @@
 
 <div class="container">
 
-    <div class="panel panel-default event">
-        <div class="panel-heading">Fifth Event</div>
+    <div class="col-md-8 col-md-offset-2 panel panel-default event-listing">
+        <div class="panel-heading">{{ page.title }}</div>
         <div class="panel-body">
-            <p>When: Wednesday, 24 January, 18h30</p>
-            <p>Where: Delaville Café</p>
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1312.1709331106058!2d2.3479960583420554!3d48.87075909482214!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e66e168e2b4c25%3A0xbd4bd1e361162230!2sDelaville+Caf%C3%A9!5e0!3m2!1sen!2sfr!4v1507643309518" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-            <p>So. Much. Turkey. Let's face the new year and start planning our developer relations strategies, together. We'll gather and discuss what worked last year, and what didn't, and how we can do better this year. Come with a description of a challenge you faced, and how you faced it—whether you succeeded or failed, and let's all learn from each others' experience.</p>
-            <p>Please <a href="https://www.eventbrite.com/e/devrel-salon-no-5-tickets-41794684025">RSVP</a>. We'll be there waiting for you.</p>
+            {{ content }}
         </div>
-    </div>
-
-    <!-- Main component for a primary marketing message or call to action -->
-    <div class="jumbotron">
-        <h1>❧ A Call to Action ❧</h1>
-        <p>You practice developer relations or developer marketing. Perhaps you&#39;ve been doing it for a while, and
-            want to share stories. Perhaps you are new and aren&#39;t yet sure what it is you do. Either way, you have a
-            story to share, and an urge to hear the stories of others. Same here; I’ve got a lot of questions, and a lot
-            of stories.</p>
-
-        <p>Let’s you and me and the others do something together.</p>
-
-        <p>But not a meetup.</p>
-
-        <blockquote>
-            <p>’Cause what the world needs now<br/>is another tech meetup<br/>like I need a hole in my head</p>
-        </blockquote>
-
-        <p>So let’s not. Let’s do something else instead. This is Paris—let’s do something more egalitarian, something…I
-            don't know, Parisian.</p>
-
-        <p>Like a salon. The salons of 17th and 18th century Paris were the most important forum for intellectual
-            discourse of the era, and were the primary conduit for the Renaissance from Italy to the rest of Western
-            Europe. This sounds fun.</p>
-
-        <p>What would a modern-day salon look like? More like an <a
-                href="https://www.forbes.com/sites/rebeccabagley/2014/08/18/how-unconferences-unleash-innovative-ideas/#7069e618645b">unconference</a>.
-            No fixed schedule, no lineup of speakers with prepared talks. Instead, we’ll come with topics that have been
-            on our minds of late, and find people who want to discuss them.</p>
-
-        <p>There might be a topic of the month. There will be places to sit in quiet conversation with your peers, and
-            meet new people. There will absolutely be a chance for you to be heard, and for you to learn from others,
-            regardless of your ability or desires to get up in front of a room and speak.</p>
-
-        <p>What do you think? Will you come join us?</p>
     </div>
 
 </div> <!-- /container -->
