--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -21,7 +21,7 @@
 
     <!-- Custom styles for this template -->
     <link href="https://fonts.googleapis.com/css?family=Crimson+Text|Libre+Baskerville:400,400i,700" rel="stylesheet">
-    <link href="assets/main.css" rel="stylesheet">
+    <link href="/css/site.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -68,8 +68,8 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/">The Paris DevRel Salon</a>
         </div>
+        <div id="logo"><a href="/"><img src="/images/logo.png"></a></div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li class="active"><a href="/">Home</a></li>
@@ -77,11 +77,10 @@
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
                         Past Meetings <span class="caret"></span>
                     </a>
-                    <ul class="dropdown-menu"> 
-                        <li><a href="/meetings/20171026.html">26 October 2017</a></li>
-                        <li><a href="/meetings/20170921.html">21 September 2017</a></li>
-                        <li><a href="/meetings/20170817.html">17 August 2017</a></li>
-                        <li><a href="/meetings/20170704.html">4 July 2017</a></li>
+                    <ul class="dropdown-menu">
+                        {% for post in site.posts %}
+                        <li><a href="{{ post.url }}">{{ post.title }}</a></li>
+                        {% endfor %}
                     </ul>
                 </li>
                 <li><a href="mailto:howdy@devrel.salon">Contact</a></li>
@@ -92,7 +91,6 @@
 </nav>
 
 <div class="container">
-
     <div class="panel panel-default event">
 
         <div class="panel-heading">{{ site.data.latest["title"] }}</div>
