--- a/css/site.css
+++ b/css/site.css
@@ -24,6 +24,7 @@ h1, h2, h3, h4, .navbar {
 
 .event-listing > .panel-heading {
 	font-family: 'Libre Baskerville', serif;
+	margin-top: 30px;
 	font-size: 30px;
 	text-align: center;
 }
