--- a/_includes/header.html
+++ b/_includes/header.html
@@ -72,7 +72,8 @@
         <div id="logo"><a href="/"><img src="/images/logo.png"></a></div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="/">Home</a></li>
+                <li><a href="/">Home</a></li>
+                <li><a href="https://medium.com/the-devrel-salon">Blog</a></li>
                 <li role="presentation" class="dropdown">
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
                         Past Meetings <span class="caret"></span>
