--- a/_includes/header.html
+++ b/_includes/header.html
@@ -33,10 +33,10 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@DevRelSalon">
     <meta name="twitter:creator" content="@DEGoodmanWilson">
-    <meta name="twitter:title" content="The Paris DevRel Salon: Summer on the Seine">
+    <meta name="twitter:title" content="The DevRel Salon">
     <meta name="twitter:description"
-          content="17 Aug: You practice developer relations or developer marketing. Let's gather and learn from and support each other.">
-    <meta name="twitter:image" content="https://devrel.salon/images/SummerOnTheSeineTwitter.png">
+          content="You practice developer relations or developer marketing. Let's gather and learn from and support each other.">
+    <meta name="twitter:image" content="https://devrel.salon/images/paris1739%20twitter.jpg">
 
     <script>
         (function (i, s, o, g, r, a, m) {
